Feature/stream search
